package br.unitins.tp1.teclado.model;

import jakarta.persistence.Entity;

@Entity
public class Categoria extends DefaultEntity {
    private String nome;
    private String descricao;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getDescricao() {
        return descricao;
    }

    public void setDescricao(String descricao) {
        this.descricao = descricao;
    }
}