@startuml
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam shadowing false


' =========================================================
' HERANÇA DE PRODUTO (InheritanceType.JOINED)
' =========================================================
abstract class Produto {
    - nome: String
    - preco: Double
}

class Teclado {
    - modelo: String
    - idioma: String
    - comFio: Boolean
    - iluminacaoRgb: Boolean
    - formato: Formato
}

class Estoque {
    - version: Long
    - quantidade: Integer
    - dataAtualizacao: LocalDate
}

' =========================================================
' CATÁLOGO BASE
' =========================================================

class Categoria {
    - nome: String
    - descricao: String
}

class Marca {
    - nome: String
    - descricao: String
}

class Switch {
    - nome: String
    - fabricante: String
    - tipo: TipoSwitch
    - forcaAtuacao: Double
}

class Keycap {
    - nome: String
    - material: String
    - cor: String
    - perfil: PerfilKeycap
}

' =========================================================
' USUÁRIOS E VENDAS
' =========================================================

class Usuario {
    - version: Long
    - nome: String
    - login: String
    - senhaHash: String
    - perfil: Perfil
    - cpf: String
    - email: String
    - tentativasFalhas: Integer
    - bloqueado: Boolean
    - saldoCashback: Double
    - codigoRecuperacao: String
    - dataExpiracaoCodigo: LocalDateTime
    - codigoUsado: Boolean
}

class Avaliacao {
    - nota: Integer
    - comentario: String
    - dataAvaliacao: LocalDateTime
}

class Telefone {
    - codigoArea: String
    - numero: String
}

class Endereco {
    - logradouro: String
    - numero: String
    - complemento: String
    - bairro: String
    - cep: String
    - ativo: Boolean
    - principal: Boolean
}

class Municipio {
    - nome: String
}

class Estado {
    - sigla: String
    - nome: String
    - regiao: Regiao
}

class CartaoCredito {
    - numeroCartao: String
    - nomeTitular: String
    - cpfTitular: String
    - bandeira: String
    - ativo: Boolean
}

class Cupom {
    - codigo: String
    - percentualDesconto: Double
    - ativo: Boolean
}

class Pedido {
    - status: StatusPedido
    - dataHora: LocalDateTime
    - valorTotal: Double
    - valorDesconto: Double
    - valorFrete: Double
    - formaPagamento: FormaPagamento
}

class ItemPedido {
    - quantidade: Integer
    - preco: Double
}

class HistoricoPedido {
    - statusAnterior: StatusPedido
    - statusNovo: StatusPedido
    - dataHora: LocalDateTime
    - usuarioResponsavel: String
}

' =========================================================
' ENUMS
' =========================================================

enum TipoSwitch {
    BLUE(1, "Blue (Clicky)")
    RED(2, "Red (Linear)")
    BROWN(3, "Brown (Tactile)")
    --
    id: Long
    label: String
}

enum PerfilKeycap {
    CHERRY(1, "Cherry")
    OEM(2, "OEM")
    SA(3, "SA")
    XDA(4, "XDA")
    --
    id: Long
    label: String
}

enum Formato {
    SESSENTA_POR_CENTO(1, "60%")
    TKL(2, "Tenkeyless (TKL)")
    FULL_SIZE(3, "Full Size")
    --
    id: Long
    label: String
}

enum FormaPagamento {
    PIX(1, "Pix")
    BOLETO(2, "Boleto Bancário")
    CARTAO_CREDITO(3, "Cartão de Crédito")
    --
    id: Long
    label: String
}

enum StatusPedido {
    AGUARDANDO_PAGAMENTO
    PAGO
    ENVIADO
    ENTREGUE
    CANCELADO
}

enum Perfil {
    ADMIN(1, "Administrador")
    USER(2, "Usuário")
    --
    id: Long
    label: String
}

enum Regiao {
    CENTRO_OESTE(1, "Centro-Oeste")
    NORDESTE(2, "Nordeste")
    NORTE(3, "Norte")
    SUDESTE(4, "Sudeste")
    SUL(5, "Sul")
    --
    id: Long
    nome: String
}

' =========================================================
' RELACIONAMENTOS
' =========================================================

' 1. Herança (Seta com ponta vazada)
Produto <|-- Teclado

' 2. Composição (Diamante preenchido) - CascadeType.ALL + orphanRemoval
Teclado "1" *-- "1" Estoque : controla >
Pedido "1" *-- "*" ItemPedido : composto por >
Pedido "1" *-- "*" HistoricoPedido : possui rastro >
Usuario "1" *-- "*" Telefone : possui >

' 3. Agregação (Diamante vazio) | Cardinalidade N:1
Teclado "*" o-- "1" Switch : usa >
Teclado "*" o-- "1" Keycap : usa >

' 4. Associação Simples | Cardinalidade N:1 e 1:N
Teclado "*" --> "1" Marca : possui >
Usuario "1" --> "*" Endereco : possui >
CartaoCredito "*" --> "1" Usuario : pertence a >
Usuario "1" --> "*" Pedido : realiza >
Endereco "*" --> "1" Municipio : pertence a >
Municipio "*" --> "1" Estado : pertence a >
Pedido "*" --> "1" Endereco : endereco de entrega >
Pedido "*" --> "0..1" CartaoCredito : pago com >
Pedido "*" --> "0..1" Cupom : utiliza >
ItemPedido "*" --> "1" Teclado : refere-se a >
Avaliacao "*" --> "1" Usuario : avalia >
Avaliacao "*" --> "1" Teclado : avaliado >

' 5. Associação Muitos-para-Muitos | Cardinalidade N:N
Teclado "*" -- "*" Categoria : classificado como >
Usuario "*" -- "*" Teclado : wishlist >

' 6. Associações dos Enums | Cardinalidade N:1
Switch "*" --> "1" TipoSwitch : tipo >
Keycap "*" --> "1" PerfilKeycap : perfil >
Pedido "*" --> "1" FormaPagamento : forma >
Pedido "*" --> "1" StatusPedido : status >
Usuario "*" --> "1" Perfil : perfil >
Estado "*" --> "1" Regiao : regiao >
Teclado "*" --> "1" Formato : formato >

@enduml